sahara (2014.2~rc1-1) experimental; urgency=medium

  * New upstream release.
  * Added python-mysqldb as dependency.
  * Updated (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Sun, 05 Oct 2014 11:16:07 +0800

sahara (2014.2~b3-1) experimental; urgency=medium

  * Initial release. (Closes: #762659)

 -- Thomas Goirand <zigo@debian.org>  Wed, 24 Sep 2014 16:34:46 +0800