@@ -1,107 +1,0 @@
-#!/bin/sh
-### BEGIN INIT INFO
-# Provides:          sahara sahara-all
-# Required-Start:    $network $local_fs $remote_fs $syslog
-# Required-Stop:     $remote_fs
-# Should-Start:      postgresql mysql keystone rabbitmq-server ntp
-# Should-Stop:       postgresql mysql keystone rabbitmq-server ntp
-# Default-Start:     2 3 4 5
-# Default-Stop:      0 1 6
-# Short-Description: Sahara API & Engine servers
-# Description:       Sahara API & Engine servers
-### END INIT INFO
-
-# Author: Thomas Goirand <zigo@debian.org>
-
-# PATH should only include /usr/* if it runs after the mountnfs.sh script
-PATH=/sbin:/usr/sbin:/bin:/usr/bin
-DESC="OpenStack Sahara Api & Engine servers"
-PROJECT_NAME=sahara
-NAME=${PROJECT_NAME}-all
-DAEMON=/usr/bin/${NAME}
-DAEMON_ARGS="--config-file=/etc/${PROJECT_NAME}/${PROJECT_NAME}.conf"
-PIDFILE=/var/run/${PROJECT_NAME}/${NAME}.pid
-SCRIPTNAME=/etc/init.d/sahara
-SYSTEM_USER=${PROJECT_NAME}
-SYSTEM_GROUP=${PROJECT_NAME}
-LOCK_DIR=/var/lock/${PROJECT_NAME}/
-
-# Exit if the package is not installed
-[ -x $DAEMON ] || exit 0
-
-mkdir -p ${LOCK_DIR} /var/run/${PROJECT_NAME}
-chown ${SYSTEM_USER} ${LOCK_DIR} /var/run/${PROJECT_NAME}
-
-. /lib/lsb/init-functions
-
-[ -r /etc/default/openstack ] && . /etc/default/openstack
-[ -r /etc/default/$NAME ] && . /etc/default/$NAME
-
-[ "x$USE_SYSLOG" = "xyes" ] && DAEMON_ARGS="$DAEMON_ARGS --use-syslog"
-[ "x$USE_LOGFILE" != "xno" ] && DAEMON_ARGS="$DAEMON_ARGS --log-file=/var/log/${PROJECT_NAME}/sahara.log"
-
-do_start(){
-	start-stop-daemon --start --quiet --background --chuid ${SYSTEM_USER}:${SYSTEM_GROUP} --make-pidfile --pidfile $PIDFILE --startas $DAEMON --test > /dev/null \
-		|| return 1
-	start-stop-daemon --start --quiet --background --chuid ${SYSTEM_USER}:${SYSTEM_GROUP} --make-pidfile --pidfile $PIDFILE --startas $DAEMON -- \
-		$DAEMON_ARGS || return 2
-}
-
-do_stop() {
-	start-stop-daemon --stop --quiet --retry=TERM/30/KILL/5 --pidfile $PIDFILE
-	RETVAL="$?"
-	rm -f $PIDFILE
-	return "$RETVAL"
-}
-
-case "$1" in
-start)
-	log_daemon_msg "Starting $DESC" "$NAME"
-	do_start
-	case "$?" in
-		0|1) log_end_msg 0 ;;
-		2) log_end_msg 1 ;;  
-	esac
-;;
-stop)
-	log_daemon_msg "Stopping $DESC" "$NAME"
-	do_stop
-	case "$?" in
-		0|1) log_end_msg 0 ;;
-		2) log_end_msg 1 ;;  
-	esac
-;;
-status)
-	status_of_proc "$DAEMON" "$NAME" && exit 0 || exit $?
-;;
-systemd-start)
-	do_start  
-;;
-systemd-stop)
-	do_stop  
-;;
-restart|force-reload)
-	log_daemon_msg "Restarting $DESC" "$NAME"
-	do_stop
-	case "$?" in
-	0|1)
-		do_start
-		case "$?" in
-			0) log_end_msg 0 ;;
-			1) log_end_msg 1 ;; # Old process is still running
-			*) log_end_msg 1 ;; # Failed to start
-		esac
-	;;
-	*)
-		# Failed to stop
-		log_end_msg 1   
-	;;
-	esac
-;;
-*)
-	echo "Usage: $SCRIPTNAME {start|stop|status|restart|force-reload}" >&2
-	exit 3
-;;
-esac
-
-exit 0
