@@ -1,0 +1,20 @@
+#!/bin/sh
+### BEGIN INIT INFO
+# Provides:          sahara sahara-all
+# Required-Start:    $network $local_fs $remote_fs $syslog
+# Required-Stop:     $remote_fs
+# Should-Start:      postgresql mysql keystone rabbitmq-server ntp
+# Should-Stop:       postgresql mysql keystone rabbitmq-server ntp
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: Sahara API & Engine servers
+# Description:       Sahara API & Engine servers
+### END INIT INFO
+
+# Author: Thomas Goirand <zigo@debian.org>
+
+DESC="OpenStack Sahara Api & Engine servers"
+PROJECT_NAME=sahara
+NAME=${PROJECT_NAME}-all
+DAEMON=/usr/bin/sahara-all
+SCRIPTNAME=/etc/init.d/sahara
