@@ -1,4 +1,4 @@
-/var/log/sahara/sahara.log {
+/var/log/sahara/sahara-all.log {
     daily
     missingok
     compress
