@@ -1,16 +1,0 @@
-[Unit]
-Description=OpenStack Sahara Api
-Documentation=http://docs.openstack.org/
-After=postgresql.service mysql.service keystone.service rabbitmq-server.service ntp.service network.service
-
-[Service]
-User=sahara
-Group=sahara
-ExecStart=/etc/init.d/sahara systemd-start
-ExecStop=/etc/init.d/sahara systemd-stop
-PIDFile=/var/run/sahara/sahara-all.pid
-Restart=on-failure
-Type=forking
-
-[Install]
-WantedBy=multi-user.target
