@@ -3,6 +3,8 @@ sahara (2014.2~rc1-1) experimental; urgency=medium
   * New upstream release.
   * Added python-mysqldb as dependency.
   * Updated (build-)depends for this release.
+  * Now using templated init script for sysv-rc, generated systemd unit and
+    upstart jobs, using openstack-pkg-tools >= 13.
 
  -- Thomas Goirand <zigo@debian.org>  Sun, 05 Oct 2014 11:16:07 +0800
 
